Permitindo a exclusão para administrador

--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-== Implementar Filiais
-	- Devise
-	- Nome de quem incluiu
+== Implementar
+	- Exclusão de CEC
+	- Separar a impressão por motoqueiro
